[tool.poetry]
name = "pcap-to-csv"
version = "0.1.0"
description = "Convert PCAP/PCAPNG file to CSV"
authors = ["Omer Aloni <omer.a@solaredge.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyshark = "^0.6"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pcap-to-csv = "pcap_to_csv.main:main"
